--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   crossorigin="anonymous"
 />
    
-    <title>Stocks market</title>
+    <title>Stocks metric</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
